@@ -38,6 +38,7 @@ our %alsa2oss =
      "snd-als100"  => [ "sb" ], # isa
      "snd-als300"  => [ "unknown" ],
      "snd-als4000" => [ "unknown" ],
+     "snd-aoa"     => [ "unknown" ],
      "snd-asihpi"  => [ "unknown" ],
      "snd-atiixp"  => [ "unknown" ],
      "snd-au8810"  => [ "unknown" ],
@@ -57,11 +58,13 @@ our %alsa2oss =
      "snd-cs4236"  => [ "ad1848" ], # isa
      "snd-cs4281"  => [ "cs4281" ],
      "snd-cs46xx"  => [ "cs46xx" ],
+     "snd-cs5530"  => [ "unknown" ],
      "snd-cs5535audio" => [ "unknown" ],
      "snd-darla20" => [ "unknown" ],
      "snd-darla24" => [ "unknown" ],
      "snd-dt0197h" => [ "unknown" ], # isa
      "snd-dt019x"  => [ "unknown" ], # isa
+     "snd-echo3g"  => [ "unknown" ],
      "snd-emu10k1" => [ "audigy", "emu10k1" ],
      "snd-emu10k1x" => [ "unknown" ],
      "snd-ens1370" => [ "es1370" ],
@@ -117,6 +120,8 @@ our %alsa2oss =
      "snd-sscape"  => [ "sscape" ], # isa
      "snd-trident" => [ "trident" ],
      "snd-usb-audio" => [ "audio" ], # usb
+     "snd-usb-caiaq"  => [ "unknown" ],
+     "snd-usb-usx2y"  => [ "unknown" ],
      "snd-via82xx"  => [ "via82cxxx_audio" ],
      "snd-vx222"   => [ "unknown" ],
      "snd-vxp440"  => [ "unknown" ], # pcmcia
