@@ -1,4 +1,7 @@
 - add support for snd-cmi8788 driver
+- draksound:
+  o prevent "unlisted driver" error for snd-aoa, snd-cs5530,
+    snd-echo3g, snd-usb-caiaq & snd-usb-usx2y drivers
 - harddrake UI:
   o stop scannerdrake from fooling us about scanners and from leading
     us to display twice the same device (#31182)
